--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/modificarCampoMARC.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/modificarCampoMARC.tmpl
@@ -12,6 +12,13 @@
 
 <ul>
 
+    <li class="sub_item" id="content_combo_tipo_nivel3_id">
+        <label for="tipo_nivel3_id">
+            [% 'Esquema:' | i18n %] 
+        </label>
+        [% selectItemType %]
+    </li>
+
     <li class="sub_item">
         <label for="campoX">Campo:</label> 
         <input type="text" value="[% catalogacion.campo %]" disabled/>
