--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/mostrarCatalogacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/mostrarCatalogacion.tmpl
@@ -26,10 +26,9 @@
                 <td width="4%">[% 'Fijo' | i18n %]</td>
                 <td width="5%">[% 'Obligatorio' | i18n %]</td>
                 <td width="5%">[% 'Visible' | i18n %]</td>
-<!--                <td width="5%">[% 'Edici&oacute;n Grupal' | i18n %]</td>-->
-<!--                <td width="5%">[% 'Habilitado' | i18n %]</td>-->
+                <td width="5%">[% 'Esquema' | i18n %]</td>
                 <td width="5%">[% 'Acciones' | i18n %]</td>
-<!--                <td width="5%">[% 'Eliminar' | i18n %]</td>-->
+
 	        </tr>
         [% FOREACH catalogacion IN catalogaciones %]
 	        <tr align="center" >
@@ -40,33 +39,6 @@
 		        <td>
 			        [% catalogacion.getLiblibrarian %]
 		        </td>
-<!-- 		        <td> -->
-<!-- FIXME esto no se va a usar mas, lo dejo para reusar en la visualizacion de la INTRA -->
-
-<!--                 Si no soy el prmiero muestro el boton para subir el orden -->
-<!--                [% IF ! catalogacion.primeroDelTipo(itemType) %]  
-                        [% PERL %]
-                            print C4::AR::Filtros::to_Icon(    
-                                                                boton   => "icon_subir",
-                                                                onClick => "modificarOrden('[% catalogacion.getId %]', 'SUBIR_ORDEN');",
-                                                                title   => "[% 'Subir en el Orden' | i18n %]",
-                                                                alternClass => "botonCentradoTabla"
-                                    ) ;
-                        [% END %]
-                [% END %]-->
-<!--                 Si no soy el ultimo muestro el boton para bajar el orden -->
-    <!--            [% IF ! catalogacion.ultimoDelTipo(itemType) %]  
-                        [% PERL %]
-                            print C4::AR::Filtros::to_Icon(    
-                                                                boton   => "icon_bajar",
-                                                                onClick => "modificarOrden('[% catalogacion.getId %]', 'BAJAR_ORDEN');",
-                                                                title   => "[% 'Bajar en el Orden' | i18n %]",
-                                                                alternClass => "botonCentradoTabla"
-                                    ) ;
-                        [% END %]
-                [% END %]
-    -->            
-<!-- 		        </td> -->
                 <td>    
                         &nbsp;  [% catalogacion.getTipoString %]
                 </td>
@@ -95,7 +67,6 @@
                                     [% END %]
                 </td>
                 <td>    
-                        <!-- AGREGADO SOLO PARA DEBUGUEAR -->
                                     [% IF catalogacion.soyFijo == 1 %]
                                             <span class="verde">[% "Si" | i18n %]</span>
                                     [% ELSE %]
@@ -103,7 +74,6 @@
                                     [% END %]
                 </td>
                 <td>    
-                        <!-- AGREGADO SOLO PARA DEBUGUEAR -->
                                     [% IF catalogacion.getObligatorio == 1 %]
                                             <span class="verde">[% "Si" | i18n %]</span>
                                     [% ELSE %]
@@ -119,24 +89,9 @@
                     >
                 [% END %]
                 </td>
-<!--                <td>-->
-<!--                [% IF catalogacion.getObligatorio != 1 %]-->
-<!--                    <input type="checkbox" id="[% id %]" value="[% catalogacion.getEdicionGrupal %]" onChange="edicionGrupal('[% catalogacion.getId %]')" -->
-<!--                    value="[% catalogacion.getEdicionGrupal %]"   [% IF catalogacion.getEdicionGrupal %] -->
-<!--                                                                checked-->
-<!--                                                            [% END %] -->
-<!--                    >-->
-<!--                [% END %]-->
-<!--                </td>-->
-<!--                <td>-->
-<!--                [% IF catalogacion.getObligatorio != 1 %]-->
-<!--                    <input type="checkbox" id="[% id %]" value="[% catalogacion.getHabilitado %]" onChange="habilitado('[% catalogacion.getId %]')" -->
-<!--                    value="[% catalogacion.getHabilitado %]"   [% IF catalogacion.getHabilitado %] -->
-<!--                                                                checked-->
-<!--                                                            [% END %] -->
-<!--                    >-->
-<!--                [% END %]-->
-<!--                </td>-->
+                <td>    
+                                    [% catalogacion.getItemType %]
+                </td>
                 <td>
                 
                 [% IF catalogacion.soyFijo != 1 %]
@@ -150,9 +105,6 @@
                         [% END %]
                 [% END %]
                 
-<!--                </td>-->
-<!--                <td>-->
-<!-- # FIXME esto no se va a usar mas, lo dejo para reusar en la visualizacion de la INTRA                 -->
                 [% IF catalogacion.soyFijo != 1 %]
                         [% PERL %]
                             print C4::AR::Filtros::to_Icon(    
