--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/detalleVisualizacionOpac.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/detalleVisualizacionOpac.tmpl
@@ -11,7 +11,29 @@
               tooltip   : EDITABLE_MSG,
               placeholder: EDITABLE_MSG,
               style   : 'display: inline',
-              submitdata : {token: "[% token %]", edit: 1},
+              submitdata : {token: "[% token %]", edit: 1, type: 'nombre'},
+              indicator : loaderPath,
+
+        });
+        $('.pre').editable('[% url_prefix %]/catalogacion/visualizacionOPAC/visualizacionOpacDB.pl', { 
+              type      : 'text',
+              cancel    : CANCELAR,
+              submit    : OK,
+              tooltip   : EDITABLE_MSG,
+              placeholder: EDITABLE_MSG,
+              style   : 'display: inline',
+              submitdata : {token: "[% token %]", edit: 1, type: 'pre'},
+              indicator : loaderPath,
+
+        });
+        $('.post').editable('[% url_prefix %]/catalogacion/visualizacionOPAC/visualizacionOpacDB.pl', { 
+              type      : 'text',
+              cancel    : CANCELAR,
+              submit    : OK,
+              tooltip   : EDITABLE_MSG,
+              placeholder: EDITABLE_MSG,
+              style   : 'display: inline',
+              submitdata : {token: "[% token %]", edit: 1, type: 'post'},
               indicator : loaderPath,
 
         });
@@ -76,9 +98,17 @@
                     </select>
             </li>
             <li class="sub_item" id="lib_librarian">
+                <label for="pre">[% 'Pre' | i18n %]:</label> 
+                <input id="pre" type="text" value="" size="50">
+            </li>
+            <li class="sub_item" id="lib_librarian">
                 <label for="liblibrarian">[% 'Vista en Intranet' | i18n %]:</label> 
                 <input id="liblibrarian" type="text" value="" size="90">
             </li> 
+            <li class="sub_item" id="lib_librarian">
+                <label for="post">[% 'Post' | i18n %]:</label> 
+                <input id="post" type="text" value="" size="50">
+            </li>
             [% PERL %]
                     print C4::AR::Filtros::to_Button(   text    => "[% 'Agregar Vista' | i18n %]",
                                                         boton   => "boton_buscar",
