--- a/opac/htdocs/opac-tmpl/temas/default/includes/opac.css
+++ b/opac/htdocs/opac-tmpl/temas/default/includes/opac.css
@@ -169,7 +169,7 @@ body textarea:focus {
 .header-breadcrumbs {
 	float: right;
 	width: 15%;
-	padding: 1.0em 0 1.5em 0;
+/*	padding: 1.0em 0 1.5em 0;*/
 }
 
 /********************/
@@ -525,6 +525,7 @@ body textarea:focus {
 .header-breadcrumbs .searchform {
 	float: right;
 	width: 400px;
+  
 	padding: 0 17px 0px 0px !important /*Non-IE6*/;
 	padding: 0 12px 0px 0px /*IE6*/;
 }
@@ -542,6 +543,7 @@ body textarea:focus {
 	font-size: 120%;
 	border-radius: 8px;
 	-moz-border-radius: 8px;
+  margin-top: 10px;
 	-webkit-border-radius: 8px;
 }
 
@@ -3756,23 +3758,24 @@ fieldset {
 
 }
 
-#alert_msg_main
-        {
+.msg_main_div{
+        margin:0;
+        color:red;
+}
+
+#alert_msg_main{
             overflow: hidden;
             width: 80%;
             border-radius: 0px 0px 13px 13px;
             text-align: center;
-            position: absolute;
-            top: 0;
-            left: 0;
             background-color:#4F6596;
-           /* border: 1px solid  #DDDEE2;*/
-            height: 0;
             color: #fff;
             font: 16px arial, sans-serif;
             font-weight:bold;
             font-style:italic;
             opacity: .9;
-            margin-top:17.2%;
-            margin-left:11%
+            margin-left:11%;
+            margin-top:0;
+            padding:0;
 }
+
