--- a/opac/htdocs/opac-tmpl/temas/default/includes/opac.css
+++ b/opac/htdocs/opac-tmpl/temas/default/includes/opac.css
@@ -6,6 +6,30 @@
 
 @IMPORT url("jquery.alerts.css");
 
+html {
+    height: 100%;
+       
+}
+
+hmtl, body {
+    height: 100%
+
+}
+
+body {
+    font-size: 62.5%;
+    background-color: rgb(255, 255, 255);
+    font-family: verdana, arial, sans-serif;
+    min-width: 1024px;
+    overflow: auto;
+} /*Font-size: 1.0em = 10px when browser default size is 16px*/
+
+body input[type="text"]:focus {
+    background: #dae0ec;
+    border: 1px solid #C8C8C8;
+}
+
+
 .loading_results {
 	background: #c1c39a;
 	color: #303030;
@@ -52,18 +76,6 @@
 	margin: 0;
 }
 
-body {
-	font-size: 62.5%;
-	background-color: rgb(255, 255, 255);
-	font-family: verdana, arial, sans-serif;
-	min-width: 1024px;
-	overflow: auto;
-} /*Font-size: 1.0em = 10px when browser default size is 16px*/
-
-body input[type="text"]:focus {
-	background: #dae0ec;
-	border: 1px solid #C8C8C8;
-}
 
 .click {
 	cursor: pointer;
@@ -78,6 +90,7 @@ body textarea:focus {
 	margin: 0px auto;
 	margin-top: 10px;
 	margin-bottom: 10px;
+	min-height: 89%;
 	border: solid 1px rgb(150, 150, 150);
 	font-size: 1.0em;
 }
@@ -147,7 +160,7 @@ body textarea:focus {
 .header-middle {
 	width: 100%;
 	height: 12px;
-	background: rgb(230, 230, 230) url(../imagenes/bg_head_middle.jpg);
+	background: rgb(230, 230, 230) url(../imagenes/bg_head_middle.png);
 	overflow: visible !important /*Firefox*/;
 	overflow: hidden /*IE6*/;
 }
@@ -891,11 +904,7 @@ body textarea:focus {
 	}
 }
 
-html {
-	filter: expression(document.execCommand ( "BackgroundImageCache", false, true)
-		);
-}
-	/*IE proprietary flicker hack for background images. Not validating, but OK*/
+/*IE proprietary flicker hack for background images. Not validating, but OK*/
 .selectLang {
 	width: 150px;
 }
