--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/agregarUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/agregarUsuario.tmpl
@@ -229,7 +229,7 @@
 <div class="buttonContainerHorizontal">
     <ul class="listaMenuBotones" >
         [% IF addBorrower %]
-                <input type="button" name="save_button" class="submit-button" onclick="save()" id="save_button" value="[% 'Aregar usuario' | i18n %]">
+                <input type="button" name="save_button" class="submit-button" onclick="save()" id="save_button" value="[% 'Agregar usuario' | i18n %]">
         [% ELSE  %]
                 <input type="button" name="save_button" class="submit-button" onclick="save()" id="save_button" value="[% 'Guardar modificaci&oacute;n' | i18n %]">
         [% END %]
