--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
@@ -1123,6 +1123,12 @@ li {
 	width: 25px;
 }
 
+.icon_ejemplares {
+    background: transparent url(../imagenes/iconos/ejemplares.png) no-repeat;
+    height: 25px;
+    width: 25px;
+}
+
 .icon_inicio {
 	background: transparent url(../imagenes/iconos/inicio.png) no-repeat;
 	height: 25px;
